# fastapi-template

./: .gitignore  main.py  pyproject.toml
app/: main.py
