[tool.poetry]
name = "fastapi-auth-template"
version = "0.1.0"
description = ""
authors = ["Almaz Yessenyazov <a.esenyazov@urent.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
fastapi = "^0.68.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
